test/spec_vectors/simd_int_to_int_extend/fail/module_5.wat
(module (func (result v128) (i32x4.extend_high_i16x8_s (i32.const 0))))